--- a/public/index.html
+++ b/public/index.html
@@ -107,10 +107,29 @@
             font-size: 1rem;
         }
         #rematchSection {
-            margin-top: 20px;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.3);
+            z-index: 1000;
+            text-align: center;
         }
-        #rematchSection button {
-            margin: 0 10px;
+        #rematchSection p {
+            font-size: 1.2rem;
+            margin-bottom: 20px;
+        }
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.5);
+            z-index: 999;
         }
     </style>
 </head>
@@ -134,11 +153,13 @@
             <div id="scoreboard" class="scoreboard"></div>
             <button id="restartButton" class="restart-button">Terug naar lobby</button>
         </div>
-        <div id="rematchSection" class="hidden">
-            <p>Wil je nog een keer spelen?</p>
-            <button id="rematchYes" class="menu-button">Ja</button>
-            <button id="rematchNo" class="menu-button">Nee</button>
-        </div>
+    </div>
+
+    <div id="overlay" class="overlay hidden"></div>
+    <div id="rematchSection" class="hidden">
+        <p>Wil je nog een keer spelen?</p>
+        <button id="rematchYes" class="menu-button">Ja</button>
+        <button id="rematchNo" class="menu-button">Nee</button>
     </div>
 
     <script>
@@ -157,6 +178,7 @@
         const rematchSection = document.getElementById('rematchSection');
         const rematchYesButton = document.getElementById('rematchYes');
         const rematchNoButton = document.getElementById('rematchNo');
+        const overlay = document.getElementById('overlay');
 
         const ROWS = 6;
         const COLS = 7;
@@ -246,11 +268,13 @@
         rematchYesButton.addEventListener('click', () => {
             socket.emit('rematchVote', { tableId, vote: true });
             rematchSection.classList.add('hidden');
+            overlay.classList.add('hidden');
         });
 
         rematchNoButton.addEventListener('click', () => {
             socket.emit('rematchVote', { tableId, vote: false });
             rematchSection.classList.add('hidden');
+            overlay.classList.add('hidden');
         });
 
         socket.on('tablesUpdate', (tables) => {
@@ -311,12 +335,14 @@
 
         socket.on('askRematch', () => {
             rematchSection.classList.remove('hidden');
+            overlay.classList.remove('hidden');
         });
 
         socket.on('returnToLobby', () => {
             gameContainer.classList.add('hidden');
             lobbyContainer.classList.remove('hidden');
             rematchSection.classList.add('hidden');
+            overlay.classList.add('hidden');
             socket.emit('getTables');
         });
 
